<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="enter">Confirm</string>
    <string name="cancer">Cancel</string>
    <string name="back">Back</string>
    <string name="connect">Connect success!</string>
    <string name="disconnect">Connect failed!</string>
    <string name="main_search">Scan</string>
    <string name="main_stop">Stop</string>
    <string name="main_action_lock">Lock</string>
    <string name="main_action_unlock">Unlock</string>
    <string name="main_action_autounlock">AutoUnlock</string>
    <string name="main_action_vibration">Vibration</string>
    <string name="main_action_backnotify">Notification</string>
    <string name="main_action_changepwd">Change password</string>
    <string name="main_action_changename">Change name</string>
    <string name="setting_modifyname_tag">Change name</string>
    <string name="setting_modifypasswd_tag">Change password</string>
    <string name="setting_modifypasswd_tag_title">Please input the new name</string>
    <string name="modifypasswd_title">Change password</string>
    <string name="modifypasswd_hind_old_passwd">old password</string>
    <string name="modifypasswd_hind_new_passwd1">new password</string>
    <string name="modifypasswd_hind_new_passwd2">new password again</string>
    <string name="device_title">Device List</string>
    <string name="device_search">Scan</string>
    <string name="device_start_ble">Please turn on the Bluetooth！</string>
    <string name="scanner_dialog_tag">Scanning…</string>
    <string name="home_show_tag1">Please input letters less than 12 characters!</string>
    <string name="main_inputpasswd_tag_title">Please input the password</string>
    <string name="smartlock_add_finish">Add device successful</string>
    <string name="notify_title_tag">Device has been disconnected</string>
    <string name="notify_title_tag2">Device has been connected</string>
    <string name="unlock_success">Unlock success!</string>
    <string name="unlock_fail">Unlock failed!</string>
    <string name="autolock_success">AutoUnlock success!</string>
    <string name="autolock_fail">AutoUnlock failed!</string>
    <string name="vibration_success">Vibrate success!</string>
    <string name="vibration_fail">Vibrate failed!</string>
    <string name="power">power：</string>
    <string name="devicename_success">The name changes successful</string>
    <string name="devicename_fail">The name changes failed</string>
    <string name="pleaseinputdevicename">please input name</string>
    <string name="showpasswd">showpasswd</string>
    <string name="scan_pwd">Please input 6 characters!</string>
    <string name="scan_pwd_error">password error！</string>
    <string name="scan_connect_fail">connect fail！</string>
    <string name="scan_search_device">search device...</string>
    <string name="removedevice">Sure you want to remove this device?</string>
    <string name="removeenter">Enter</string>
    <string name="removecancer">Cancer</string>
    <string name="scandevice">Scan Device...</string>
    <string name="inputoldpwd">Please enter the original password</string>
    <string name="inputnewpwd">Please enter your 6-digit password</string>
    <string name="inputnewenterpwd">Please confirm the new 6 digit password</string>
    <string name="oldpwdfail">The original password is incorrect</string>
    <string name="oldnewpwd">The new password does not enter twice</string>
    <string name="hindpwd">hind password</string>
    <string name="changepwdok">Password successfully changed</string>
    <string name="changepwdfail">Password change failed</string>
    <string name="device_resume_connect_failed">Connection failed! The device password has been modified, Please delete this device!</string>
    <string name="delete_device">Delete device</string>
    <string name="device_disconnected">This device is disconnected!</string>
    <string name="ble_disable">BLE is disabled!</string>
    <string name="app_name">Nulock</string>
</resources>
