<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:background="@color/title_bg" android:layout_width="match_parent" android:layout_height="50dp">
        <Button android:id="@+id/btn_modify_password_back" android:background="@drawable/title_back" android:layout_width="wrap_content" android:layout_height="50dp"/>
        <TextView android:textSize="18sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/textview_modify_password_title" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/modifypasswd_title" android:layout_centerInParent="true"/>
        <Button android:textSize="14sp" android:textColor="@color/white" android:id="@+id/btn_modify_password_ensure" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="50dp" android:text="@string/enter" android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
            <RelativeLayout android:layout_width="match_parent" android:layout_height="40dp">
                <EditText android:enabled="false" android:textSize="12sp" android:gravity="center_vertical" android:id="@+id/modifypasswd_old_passwd" android:layout_height="40dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:maxLength="6" android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ" android:editable="false" android:inputType="numberPassword" style="@style/MyEditText"/>
                <TextView android:textColor="@color/mygray" android:gravity="center" android:id="@+id/modifypasswd_old_passwd_show" android:layout_marginRight="10dp" android:text="@string/showpasswd" android:layout_alignParentRight="true" style="@style/myMintext_match_h"/>
            </RelativeLayout>
            <TextView style="@style/myline_w"/>
            <RelativeLayout android:layout_width="match_parent" android:layout_height="40dp">
                <EditText android:textSize="11sp" android:gravity="center_vertical" android:id="@+id/modifypasswd_new_passwd1" android:layout_height="40dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:hint="@string/modifypasswd_hind_new_passwd1" android:maxLength="6" android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ" android:inputType="textPassword" style="@style/MyEditText"/>
                <TextView android:textColor="@color/mygray" android:gravity="center" android:id="@+id/modifypasswd_new_passwd1_show" android:layout_marginRight="10dp" android:text="@string/showpasswd" android:layout_alignParentRight="true" style="@style/myMintext_match_h"/>
            </RelativeLayout>
            <TextView style="@style/myline_w"/>
            <RelativeLayout android:layout_width="match_parent" android:layout_height="40dp">
                <EditText android:textSize="11sp" android:gravity="center_vertical" android:id="@+id/modifypasswd_new_passwd2" android:layout_height="40dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:hint="@string/modifypasswd_hind_new_passwd2" android:maxLength="6" android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ" android:inputType="textPassword" style="@style/MyEditText"/>
                <TextView android:textColor="@color/mygray" android:gravity="center" android:id="@+id/modifypasswd_new_passwd2_show" android:layout_marginRight="10dp" android:text="@string/showpasswd" android:layout_alignParentRight="true" style="@style/myMintext_match_h"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
